Chore: cleanup for remote

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,5 +1,5 @@
 [tool.poetry]
-name = "spotify-django-react"
+name = "music_controller"
 version = "0.1.0"
 description = "A Music Controller Frontend For parties that allow guests to have some control over played music"
 authors = ["Mohamed Tarek <mohamed96tarek@hotmail.com>"]
