--- a/.gitignore
+++ b/.gitignore
@@ -53,11 +53,6 @@ var/
 .installed.cfg
 *.egg
 
-# PyInstaller
-#  Usually these files are written by a python script from a template
-#  before PyInstaller builds the exe, so as to inject date/other infos into it.
-*.manifest
-*.spec
 
 # Installer logs
 pip-log.txt
@@ -71,16 +66,10 @@ htmlcov/
 nosetests.xml
 coverage.xml
 
-# Translations
-*.mo
-*.pot
 
-# Sphinx documentation
-docs/_build/
-
-# PyBuilder
-target/
-
+.mypy_cache
+.ropeproject
+.venv
 
 ### Django ###
 *.log
